# snektalk

./: .gitignore  README.md  download-libs.sh  pyproject.toml
assets/: index.html
assets/scripts/: edit.js  liveedit.js  readonly.js  repl.js  ro.js
assets/style/: pf.css  snek.css
demo/: demo.py  demo_analyzers.py  graph.py  mnist.py
pythonface/: cli.py  debug.py  evaluator.py  fntools.py  repr.py  server.py  session.py  utils.py
snektalk/: __init__.py  analyze.py  cli.py  config.py  debug.py  evaluator.py  fntools.py  fzf.py  lib.py  network.py  registry.py  repr.py  runpy.py  server.py  session.py  utils.py  words.txt
snektalk/assets/: index.html
snektalk/assets/scripts/: liveedit.js  readonly.js  repl.js
snektalk/assets/style/: snek.css
snektalk/feat/: edit.py
snektalk/plugins/: __init__.py  default.py
tests/feat/: test_edit.py
