[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pythonface"
version = "0.1.0"
description = "Advanced Python interpreter"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/breuleux/pythonface"
include = ["assets/"]

[tool.poetry.dependencies]
python = "^3.7"
coleo = "^0.2.1"
hrepr = "^0.3.5"
sanic = "^20.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
pythonface = "pythonface.cli:main"

[tool.black]
line-length = 80

[tool.isort]
known_first_party = "pythonface"
known_third_party = "coleo,hrepr"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.coverage.run]
omit = []
