[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "snektalk"
version = "0.0.1"
description = "Advanced Python REPL"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/breuleux/snektalk"
include = ["assets/"]

[tool.poetry.dependencies]
python = "^3.8"
coleo = "^0.2.1"
hrepr = "^0.3.5"
sanic = "^20.9.1"
jurigged = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
snektalk = "snektalk.cli:main"
sktk = "snektalk.cli:main"

[tool.black]
line-length = 80

[tool.isort]
known_first_party = "snektalk"
known_third_party = "coleo,hrepr"
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.coverage.run]
omit = []
